<resources>
    <string name="app_name">Ahorcado</string>
    <string name="ahorcado">AHORCADO</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="logo">Logo</string>
    <string name="correo_electr_nico">Correo electrónico:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="nombre_de_usuario">Nombre de usuario:</string>
    <string name="crear_sala">crear sala</string>
    <string name="unirse_a_sala">Unirse a sala</string>
    <string name="c_digo_para_unirse_a_la_sala">Código para unirse a la sala:</string>
    <string name="salir_de_la_cuenta">Salir de la cuenta</string>
    <string name="c_digo_sala">Código Sala:</string>
    <string name="name">Name</string>
    <string name="letras_falladas">Letras falladas:</string>
    <string name="chat">Chat:</string>
    <string name="palabra">Palabra:</string>
    <string name="enviar">Enviar</string>
</resources>
